@@ -67,6 +67,9 @@ There is no provisioning for \fBssh\fR so unless you have configured
 Also note that the PATH on the remote host should be set in such a way that all
 the rdup-util scripts can be found.
 .TP
+.B \-E file
+See \-E in rdup(8).
+.TP
 .B \-k keyfile
 Encrypt the files while backing up with \fIkeyfile\fR. This option
 inserts \fBcrypt.pl keyfile\fR in the pipeline. If both \fI-z\fR and
